# tg-bot-predlozhka

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  QUICKSTART.md  README.md  alembic.ini  deploy.sh  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  verify_deployment.py
.github/workflows/: tests.yml
.qoder/quests/: telegram-bot-development.md
bot/: __init__.py  main.py
bot/handlers/: admin_handlers.py  statistics_handlers.py  user_handlers.py
bot/models/: __init__.py  database.py
bot/services/: decision_manager.py  error_handler.py  notification_service.py  publication_service.py  rate_limit.py  recovery_service.py  statistics_service.py  submission_service.py  user_service.py
bot/utils/: config.py  database.py  health.py  logging.py  redis_manager.py  states.py  time.py
config/: config.json  messages.json
migrations/: env.py  init.sql
migrations/versions/: 001_initial_schema.py
tests/: conftest.py  factories.py  test_admin_flow.py  test_config.py  test_decision_manager.py  test_media_submission.py  test_publication_flow.py  test_rate_limit.py  test_recovery_flow.py  test_statistics_service.py  test_submission_service.py  test_time.py  test_user_flow.py  test_user_service.py
